--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,13 +49,6 @@ html, body {
     overflow: hidden;
     height: 275px;
     margin-bottom: 0; }
-  .main .description {
-    padding: 15px 15px; }
-    .main .description p {
-      font-size: 16px;
-      margin-bottom: 10px; }
-    .main .description .liste-activite {
-      margin-left: 25px; }
   .main .chalet-min .label {
     width: 5em;
     height: 5em; }
@@ -100,5 +93,13 @@ html, body {
   display: none; }
 .chalet-backoffice .progress .bar {
   min-width: 0em !important; }
+
+.map-footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 250px;
+  background: white;
+  padding-top: 10px; }
 
 /*# sourceMappingURL=style.css.map */
