--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,6 +1,6 @@
 <% include header %>
-<div class="ui page grid main">
-	<!-- Slider -->
+<div class="ui page middle aligned grid main">
+	 Slider
 	<div class="row">
 		<div class="column">
 			<div class="ui segment">
@@ -15,72 +15,113 @@
 	</div>
 	<div class="row">
 		<div class="twelve wide column">
-			<h2 class="ui top teal inverted attached segment header">
-				Description du site
-			</h2>
-			<div class="ui attached segment description">
-				<p>&emsp;&emsp;Gîte et chalets à louer dans le parc naturel du Haut Languedoc, 40 hectares</p>
+			<div class="ui grid">
+				<div class="row">
+					<div class="column">
+						<h2 class="ui top teal inverted attached segment header">
+							Description du site
+						</h2>
+						<div class="ui attached segment description">
+							<p>&emsp;&emsp;Gîte et chalets à louer dans le parc naturel du Haut Languedoc, 40 hectares</p>
 
-				<p>&emsp;&emsp;Mézouilhac, minuscule hameau de Riols, entre mer et montagne, est niché dans une petite vallée, au cœur du Parc Naturel Régional du Haut Languedoc. A 8 minutes de tous commerces et professions de santé ; à 20 minutes des lacs ; à 60 minutes de la Méditerranée ; à proximité de tous loisirs : </p>
-				<div class="ui list liste-activite">
-					<span class="item">
-						<i class="fa fa-check-square"></i>
-						Pêche
-					</span>
-					<span class="item">
-						<i class="fa fa-check-square"></i>
-						Randonnée
-					</span>
-					<span class="item">
-						<i class="fa fa-check-square"></i>
-						V.T.T. (plusieurs vélos sont à votre disposition)
-					</span>
-					<span class="item">
-						<i class="fa fa-check-square"></i>
-						Escalade
-					</span>
-					<span class="item">
-						<i class="fa fa-check-square"></i>
-						Canoë
-					</span>
-					<span class="item">
-						<i class="fa fa-check-square"></i>
-						Equitation
-					</span>
-					<span class="item">
-						<i class="fa fa-check-square"></i>
-						Tennis…
-					</span>
+							<p>&emsp;&emsp;Mézouilhac, minuscule hameau de Riols, entre mer et montagne, est niché dans une petite vallée, au cœur du Parc Naturel Régional du Haut Languedoc. A 8 minutes de tous commerces et professions de santé ; à 20 minutes des lacs ; à 60 minutes de la Méditerranée</p>
+
+							<p><bold>A proximité de tous loisirs</bold></p>
+
+							<div class="ui mini steps list-activite">
+								<div class="step">
+									<div class="content">
+										<div class="title">Pêche</div>
+									</div>
+								</div>
+								<div class="step">
+									<div class="content">
+										<div class="title">Randonnée</div>
+									</div>
+								</div>
+								<div class="step">
+									<div class="content">
+										<div class="title">V.T.T.</div>
+									</div>
+								</div>
+								<div class="step">
+									<div class="content">
+										<div class="title">Escalade</div>
+									</div>
+								</div>
+								<div class="step">
+									<div class="content">
+										<div class="title">Canoë</div>
+									</div>
+								</div>
+								<div class="step">
+									<div class="content">
+										<div class="title">Equitation</div>
+									</div>
+								</div>
+								<div class="step">
+									<div class="content">
+										<div class="title">Tennis…</div>
+									</div>
+								</div>
+							</div>
+							<p>&emsp;&emsp;Dans cet environnement de calme et de pleine nature, nous vous proposons nos 3 chalets et notre gîte sur un terrain de 40 hectares avec potager et arbres fruitiers à disposition. Véritable paradis des amoureux de la nature, la propriété se situe au cœur d'une forêt de chênes verts et de châtaigniers. Ouvert toute l'année.</p>
+						</div>
+					</div>
 				</div>
-
-				<p>&emsp;&emsp;Dans cet environnement de calme et de pleine nature, nous vous proposons nos 3 chalets et notre gîte sur un terrain de 40 hectares avec potager et arbres fruitiers à disposition. Véritable paradis des amoureux de la nature, la propriété se situe au cœur d'une forêt de chênes verts et de châtaigniers. Ouvert toute l'année.</p>
-
-			</div>	
+				<div class="row">
+					<div class="four wide column">
+						<div class="ui segment">
+							<img class="ui medium centered image" src="/img/chalets/marianne-champ-min.JPG">
+						</div>
+					</div>
+					<div class="four wide column">
+						<div class="ui segment">
+							<img class="ui medium centered image" src="/img/chalets/marianne-champ-min.JPG">
+						</div>
+					</div>
+					<div class="four wide column">
+						<div class="ui segment">
+							<img class="ui medium centered image" src="/img/chalets/marianne-champ-min.JPG">
+						</div>
+					</div>
+					<div class="four wide column">
+						<div class="ui segment">
+							<img class="ui medium centered image" src="/img/chalets/marianne-champ-min.JPG">
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="four wide column">
 			<div class="ui green segment detail">
 				<div class="item">
-					<i class="fa fa-tree"></i> 40 hectar de terrain
+					<i class="circular inverted green tree icon"></i> 40 hectars de terrain
 				</div>
 			</div>
 			<div class="ui blue segment detail">
 				<div class="item">
-					<i class="fa fa-tint"></i> 2 piscines
+					<i class="circular inverted blue theme icon"></i> 2 piscines
 				</div>
 			</div>
 			<div class="ui purple segment detail">
 				<div class="item">
-					<i class="fa fa-wifi"></i> Accès Wi-Fi
+					<i class="circular inverted purple wifi icon"></i> Accès Wi-Fi
 				</div>
 			</div>
-			<div class="ui black segment detail">
+			<div class="ui yellow segment detail">
 				<div class="item">
-					<i class="fa fa-paw"></i> Animaux bienvenus
+					<i class="circular inverted yellow paw icon"></i> Animaux bienvenus
+				</div>
+			</div>
+			<div class="ui red segment detail">
+				<div class="item">
+					<i class="circular inverted red flag icon"></i> Vélos à disposition
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
+</div>	
 
 <% include footer %>
 <script src="js/index.js"></script>
