--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -17,7 +17,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.11/slick.css"/>
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+    <!--<link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />-->
 
 </head>
 
@@ -25,18 +25,18 @@
 
 <div class="menu">
     <ul>
-            <li <% if (pageName === 'accueil') { %>class="active" <% } %>>
-                <a href="/">Accueil</a>
-            </li>
-            <li <% if (pageName === 'chalets') { %>class="active" <% } %>>
-                <a href="/les-chalets">Les chalets</a>
-            </li>
-            <li <% if (pageName === 'activites') { %>class="active" <% } %>>
-                <a href="/activites" >Activit&eacute;s / Région</a>
-            </li>
-            <li <% if (pageName === 'contact') {  %>class="active" <% } %>>
-                <a href="/contact">Contact</a>
-            </li>
+        <li <% if (pageName === 'accueil') { %>class="active" <% } %>>
+            <a href="/">Accueil</a>
+        </li>
+        <li <% if (pageName === 'chalets') { %>class="active" <% } %>>
+            <a href="/les-chalets">Les chalets</a>
+        </li>
+        <li <% if (pageName === 'activites') { %>class="active" <% } %>>
+            <a href="/activites" >Activit&eacute;s / Région</a>
+        </li>
+        <li <% if (pageName === 'contact') {  %>class="active" <% } %>>
+            <a href="/contact">Contact</a>
+        </li>
     </ul>
 </div>
 
