--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -57,16 +57,41 @@ html, body {
     margin-bottom: 0;
   }
 
-//  .description {
-//    padding: 15px 15px;
-//    p {
-//      font-size: 16px;
-//      margin-bottom: 10px;
-//    }
-//    .liste-activite {
-//      margin-left: 25px;
-//    }
-//  }
+  .description {
+    padding: 30px 25px;
+    p {
+      font-size: 1em;
+    }
+    .steps {
+      margin: 20px auto !important;
+      .content {
+        font-size: 0.8em;
+      }
+    }
+  }
+.gmap-window {
+  padding-top: 10px;
+  padding-right: 10px;
+
+  .header {
+    font-size: 1.2em;
+  }
+
+  .row {
+    margin-bottom: 2px !important;
+    padding-bottom: 2px !important;
+  }
+  .icon-gmap {
+    margin-bottom: 5px !important;
+    margin-right: 10px !important;
+    margin-top: 5px !important;
+  }
+}
+
+.list-activites {
+    overflow-y: scroll;
+}
+
 
   .chalet-min {
     .label {
@@ -147,11 +172,32 @@ html, body {
   }
 }
 
-.map-footer {
-  position: absolute;
-  bottom: 0;
+section.contact {
+
+  min-height: 100%;
+  height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
+  height: 100%;
+  margin: 0 auto -250px;
+
+  .map-footer {
+    width: 100%;
+    height: 250px;
+    background: rgb(255, 255, 255);
+    padding-top: 10px;
+    clear: both;
+    position: relative;
+    z-index: 10;
+  }
+}
+
+.facebook-box {
   width: 100%;
-  height: 250px;
-  background: rgb(255,255,255);
-  padding-top: 10px;
+
+  & > span {
+    width: 100% !important;
+
+    & > iframe {
+      width: 100% !important;
+    }
+  }
 }
