--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -26,7 +26,7 @@
 
 							<p>&emsp;&emsp;Mézouilhac, minuscule hameau de Riols, entre mer et montagne, est niché dans une petite vallée, au cœur du Parc Naturel Régional du Haut Languedoc. A 8 minutes de tous commerces et professions de santé ; à 20 minutes des lacs ; à 60 minutes de la Méditerranée</p>
 
-							<p><bold>A proximité de tous loisirs</bold></p>
+							<p><bold>A proximité de tous loisirs</bold>f</p>
 
 							<div class="ui mini steps list-activite">
 								<div class="step">
